--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "svg-fontify",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"description": "Make font from all svgs given.",
 	"license": "MIT",
 	"repository": "WebArtWork/svg-fontify",
@@ -16,5 +16,8 @@
 		"fontify",
 		"svgs",
 		"fonts"
-	]
+	],
+	"dependencies": {
+		"webfonts-generator": "*"
+	}
 }
